# workshop1

./: .gitignore  INTEGRATION_GUIDE.md  README.md  env.template  pyproject.toml
outputs/: camera-cat-hope  cat  cat-hope
src/: __init__.py  main.py
